--- a/style.css
+++ b/style.css
@@ -28,11 +28,19 @@ p{
 }
 
 .button {
-    background-color: black;
+    background-color: rgb(48, 48, 48);
     color: white;
     width: 92px;
     height: 70px;
     font-size: 2.5rem;
     margin: 10px;
     border-radius: 15px;
+}
+
+.clear{
+    background-color: red;
+}
+
+.operator{
+    background-color: rgb(180, 180, 180);
 }
