--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1{
 .container{
     width: 460px;
     height: 540px;
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(0, 0, 0);
     margin: auto;
     padding: 10px;
     border-radius: 10px;
@@ -18,7 +18,7 @@ p{
 }
 
 #screen {
-    background-color: rgb(199, 199, 199);
+    background-color: rgb(216, 216, 216);
     height: 80px;
     width: 440px;
     margin: 5px;
@@ -28,8 +28,8 @@ p{
 }
 
 .button {
-    background-color: rgb(48, 48, 48);
-    color: white;
+    background-color: rgb(78, 78, 78);
+    color: rgb(255, 255, 255);
     width: 92px;
     height: 70px;
     font-size: 2.5rem;
@@ -42,9 +42,9 @@ p{
 }
 
 .operator{
-    background-color: rgb(180, 180, 180);
+    background-color: rgb(255, 153, 0);
 }
 
 .button:hover{
-    border: 5px solid greenyellow;
+    border: 5px solid rgb(117, 117, 117);
 }
